Bug 66403 - UI: Clicking OK on Tools>AutoCorrect options>Exceptions window ends in infinite loop
Summary: UI: Clicking OK on Tools>AutoCorrect options>Exceptions window ends in infini...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.3.3 release
Hardware: All All
: medium critical
Assignee: Caolán McNamara
URL:
Whiteboard: BSA target:4.1.0.2 target:4.0.5 targe...
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-30 14:48 UTC by Jerome Fenal
Modified: 2013-07-01 10:15 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jerome Fenal 2013-06-30 14:48:57 UTC
Problem description: 

Tested on Caolan McNamara's internal build for Red Hat, 4.0.3.3, for RHEL6.

When the default locale is not C or en-US@UTF-8, clicking OK on the "Exception" (Tools->AutoCorrect options->Exceptions) window make LO going AWOL (e.g. freezed, windows still there, not refreshed, 100% CPU on one core).

Tested in writer, impress, and calc, with locales C (ok), en_US.UTF-8 (ok), de_DE.UTF-8 (ok) and fr_FR.UTF-8 (not ok).

Steps to reproduce:
1. yum install libreoffice-langpack-fr
2. LANG=fr-FR.UTF-8 libreoffice --writer (or --impress or --calc)
3. Outils->Options d'AutoCorrection, tab Exceptions
   Switch languages from French to Anglais (U.S.A.)
   Click OK

Current behavior:

LO not responsive anymore, CPU goes 100% on one core.

Expected behavior:

Close window, get back to work.

Operating System: Linux (Other)
Version: 4.0.3.3 release
Comment 1 Jorendc 2013-07-01 09:05:59 UTC
Thanks for reporting!

I can reproduce this behavior tested using Mac OSX 10.8.4 with LibreOffice 4.1.0.1 RC1, with Dutch UI.

When I changed the AutoCorrect language from Dutch (Belgium) to English (US) it didn't crash. I clicked on OK to accept the changes, went back to AutoCorrect options and changes back language to Dutch (Belgium) -> Freeze.

I had to force quit LibreOffice.

I really don't have _any_ clue which developer to ping :|.

@Caolan: Can I disturb you with this bug :)? Or is this a freeze on another component (on localization domain?). Sorry to bug you if this is not vcl related.

Kind regards,
Joren
Comment 2 Caolán McNamara 2013-07-01 09:46:10 UTC
typo, ++i vs ++it, loop never ends, gerrit reviews for 4-0 and 4-1 submitted
Comment 3 Commit Notification 2013-07-01 09:51:06 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4ce8756b9e9b76f3f4eac1d5e9209aef51f46c44&h=libreoffice-4-1

Resolves: fdo#66403 infinite loop, typo i should be it


It will be available in LibreOffice 4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2013-07-01 09:51:24 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3367c767fec1b02f4493490e1ef5b2929dfbbd46&h=libreoffice-4-0

Resolves: fdo#66403 infinite loop, typo i should be it


It will be available in LibreOffice 4.0.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2013-07-01 09:51:43 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e21544132a6732334a14194e02232b28e559303b

Resolves: fdo#66403 infinite loop, typo i should be it



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.