Resolves: fdo#66403 infinite loop, typo i should be it

Conflicts:
	cui/source/tabpages/autocdlg.cxx

Change-Id: Ia3ec1302649809b7a63befc0a48fb142f1169936
Reviewed-on: https://gerrit.libreoffice.org/4649
Reviewed-by: Bosdonnat Cedric <cedric.bosdonnat@free.fr>
Tested-by: Bosdonnat Cedric <cedric.bosdonnat@free.fr>